# pytorch-introduction

./: .gitignore  PITCHME.md  README.md  pyproject.toml
model/: trained_model.pth
src/: dataset.py  model.py  test.py  train.py  trainer.py  transform.py  util.py
