[tool.poetry]
name = "pytorch-introduction"
version = "0.0.1"
description = ""
authors = ["Yuma Kinoshita"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.1"
Pillow = "^7.1.1"
torch = "^1.5.0"
torchvision = "^0.6.0"
torchaudio = "^0.5.0"
torchsummary = "^1.5.1"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
