[tool.poetry]
name = "pytorch-introduction"
version = "0.1.0"
description = ""
authors = ["Yuma Kinoshita <y.kinoshita.research@gmail.com>"]
readme = "README.md"
packages = [{include = "pytorch_introduction"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.1"
torchaudio = "^0.12.1"
torchsummary = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
